--- a/res/layout/calendar.xml
+++ b/res/layout/calendar.xml
@@ -1,65 +1,76 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/darker_gray">
 
-    <LinearLayout android:orientation="horizontal"
-                  android:layout_width="fill_parent"
-                  android:layout_height="wrap_content"
-                  android:gravity="center_vertical"
-                  android:background="@android:color/darker_gray">
+    <LinearLayout
+        android:orientation="horizontal"
+        android:layout_width="fill_parent"
+        android:layout_height="60dp"
+        android:gravity="center_vertical"
+        android:background="@color/calendar_title_back">
 
-        <Button android:id="@+id/calendar_prev"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="Prev"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                android:onClick="onPrevious"/>
+        <ImageView
+            android:id="@+id/calendar_prev"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:src="@drawable/calendar_prev" />
 
 
-        <TextView android:id="@+id/calendar_month_text"
-                  android:layout_width="0dp"
-                  android:layout_height="40dp"
-                  android:textStyle="bold"
-                  android:textColor="@android:color/black"
-                  android:textSize="20dp"
-                  android:layout_weight="1"
-                  android:gravity="center"/>
+        <TextView
+            android:id="@+id/calendar_month_text"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:layout_weight="2"
+            android:gravity="center"
+            android:layout_marginRight="5dp" />
 
-        <TextView android:id="@+id/calendar_year_text"
-                  android:layout_width="0dp"
-                  android:layout_height="40dp"
-                  android:textStyle="bold"
-                  android:textColor="@android:color/black"
-                  android:textSize="20dp"
-                  android:layout_weight="1"
-                  android:gravity="center"/>
+        <TextView
+            android:id="@+id/calendar_year_text"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:textColor="@android:color/black"
+            android:textSize="20sp"
+            android:layout_weight="1"
+            android:gravity="center" />
 
-        <Button android:id="@+id/calendar_next"
-                android:layout_width="0dp"
-                android:layout_height="40dp"
-                android:text="Next"
-                android:gravity="center"
-                android:textSize="20dp"
-                android:textStyle="bold"
-                android:layout_weight="1"
-                android:onClick="onNext"/>
+        <ImageView
+            android:id="@+id/calendar_next"
+            android:layout_width="0dp"
+            android:layout_height="40dp"
+            android:gravity="center"
+            android:layout_weight="1"
+            android:src="@drawable/calendar_next" />
     </LinearLayout>
 
-    <GridView android:id="@+id/calendar_grid"
-              android:layout_width="wrap_content"
-              android:layout_height="0dp"
-              android:columnWidth="50dp"
-              android:numColumns="7"
-              android:verticalSpacing="5dp"
-              android:horizontalSpacing="5dp"
-              android:gravity="center"
-              android:layout_weight="1">
+    <GridView
+        android:id="@+id/weekday_gridview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="0dp"
+        android:columnWidth="50dp"
+        android:horizontalSpacing="1dp"
+        android:numColumns="7"
+        android:background="@android:color/white"
+        android:stretchMode="columnWidth"></GridView>
+
+    <GridView
+        android:id="@+id/calendar_grid"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:columnWidth="50dp"
+        android:numColumns="7"
+        android:verticalSpacing="1dp"
+        android:horizontalSpacing="1dp"
+        android:layout_weight="1"
+        android:stretchMode="columnWidth">
 
     </GridView>
 
