--- a/res/layout/calendar_item.xml
+++ b/res/layout/calendar_item.xml
@@ -1,17 +1,19 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-                android:orientation="vertical"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:gravity="center">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:gravity="center">
 
-    <TextView android:id="@+id/calendar_item_date"
-              android:layout_width="wrap_content"
-              android:layout_height="wrap_content"
-              android:textSize="20dp"
-              android:textColor="@android:color/black"
-              android:gravity="center"
-              android:background="@drawable/calendar_item_back"/>
+    <com.pet.calendar.view.SquareTextView
+        android:id="@+id/calendar_item_date"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:textSize="12sp"
+        android:textStyle="bold"
+        android:textColor="@android:color/black"
+        android:gravity="center"
+        android:background="@drawable/date_back"/>
 
 </RelativeLayout>
