--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -1,19 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:orientation="vertical"
-              android:layout_width="fill_parent"
-              android:layout_height="fill_parent">
+    android:orientation="horizontal"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent">
 
-    <TextView android:id="@+id/main_calendar"
-              android:layout_width="150dp"
-              android:layout_height="50dp"
-              android:text="Calendar"
-              android:gravity="center"
-              android:textSize="22dp"
-              android:textStyle="bold"
-              android:textColor="@android:color/background_dark"
-              android:background="@android:color/white"
-              android:layout_gravity="center"/>
+    <TextView
+        android:id="@+id/from_date"
+        android:layout_width="0dp"
+        android:layout_height="50dp"
+        android:layout_weight="1"
+        android:text="From"
+        android:gravity="center"
+        android:textSize="22dp"
+        android:textStyle="bold"
+        android:textColor="@android:color/background_dark"
+        android:background="@android:color/white"
+        android:layout_margin="2dp"/>
+
+    <TextView
+        android:id="@+id/to_date"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="50dp"
+        android:text="To"
+        android:gravity="center"
+        android:textSize="22dp"
+        android:textStyle="bold"
+        android:textColor="@android:color/background_dark"
+        android:background="@android:color/white"
+        android:layout_margin="2dp"/>
 
 </LinearLayout>
 
